@@ -3,11 +3,18 @@ local frep = require("__fdsl__.lib.recipe")
 -------------------------------------------------------------------------- Coke
 
 if settings.startup["alloy-smelting-coke"].value then
-  AlloySmelting.smelt_in_kiln("steel-plate", {type="item", name="coke", amount=1})
+	AlloySmelting.smelt_in_kiln("steel-plate", {type="item", name="coke", amount=1})
 
-  if mods["space-age"] then
-    data.raw.item["carbon"].fuel_value = "5MJ"
-  end
+	if mods["space-age"] then
+		data.raw.item["carbon"].fuel_value = "5MJ"
+
+		if settings.startup["alloy-smelting-lds-coke"].value then
+			if (not mods["IridescentIndustry"]) then
+				table.insert(data.raw.recipe["casting-low-density-structure"].ingredients, {type = "item", name = "coke", amount = 2})
+			end
+		end
+		
+	end
 end
 
 -------------------------------------------------------------------------- Metallurgy
